# sensitivity-aware-layer-quantization

./: .gitignore  CLUSTER_QUANTIZATION_STEPS.md  FINAL_RESULTS.md  LICENSE  MODEL_CARD_TEMPLATE.md  PROJECT_SUMMARY.md  QUANTIZATION_RESULTS.md  README.md  RESULTS.md  STATUS.md  check_layers.py  debug_model_structure.py  pyproject.toml  requirements.txt
configs/: default.yaml  local_mac.yaml  mac_gguf.yaml  mistral7b.yaml  openshift.yaml  tiny_test.yaml
deployment/: README.md  dev-pod.yaml  mixtral-vllm-deployment.yaml  optimizer-job.yaml  routing-analysis-job.yaml  run-on-mixtral-dev.sh
docs/: BENCHMARKING_GUIDE.md  BENCHMARK_TEMPLATE.md  RESULTS_QWEN.md  TESTING.md
scripts/: 01_analyze_routing.py  01_profile_activations.py  02_generate_configs_heuristic.py  02_generate_tensor_configs.py  02_optimize_layer_config.py  03_create_mixed_models.sh  03_test_layer_quant.py  04_benchmark_perplexity.sh  04_measure_real_quantization.py  05_benchmark_lmeval.py  05_benchmark_lmeval.sh  05_checkpoint_quantization.py  06_final_benchmark.py  07_custom_serialization_benchmark.py  08_explore_gguf.py  09_create_mixed_precision_gguf.py  10_run_bayesian_optimization.py  11_create_layerwise_gguf.py  12_assemble_custom_gguf.py  13_benchmark_gguf_variants.py  14_create_mixed_gguf_with_llamacpp.sh  14b_create_mixed_gguf_cluster.sh  15_generate_tensor_type_files.py  16_benchmark_gguf_models.py  16_benchmark_with_llamacli.sh  17_simple_model_validation.sh  17_validate_and_compare_models.py  18_gpu_perplexity_benchmark.py  19_simple_quality_test.py  deploy_and_quantize.sh  run_on_cluster.sh  (+1 more)
(+25 files in other folders)
