[project]
name = "systematic-adaptive-layer-quantization"
version = "1.0.0"
description = "SALQ: Systematic Adaptive Layer Quantization for improved LLM compression"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
